syntax = "proto3";

package com.example.grpc;

message CardDetailRequest{
  string id= 1;
}

message CardDetailResponse{
  bool accept = 1;
}

service CardDetailService{
  rpc isAccept(CardDetailRequest) returns (CardDetailResponse);
}